<resources>
    <!-- FIRST app_name : TimeRecord -->
    <string name="app_name">TIME RECORD</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="main_content">時刻登録</string>
    <string name="list_content">月別一覧</string>
    <string name="edit_content">時刻編集</string>
    <string name="holiday_content">休暇登録</string>
    <string name="evacuation_content">退避処理</string>
    <string name="db_operation_content">DB処理</string>
    <string name="nav_mid_title">Important</string>

    <string name="account_update">Δアカウント「更新」</string>
    <string name="account_choice">Ξアカウント「選択」</string>
    <string name="csv_export">ΣCSVファイル出力</string>
    <string name="oauth_file">※認証ファイル削除</string>
    <string name="delete_table">※全テーブル削除</string>
    <string name="delete_file">※DBファイル削除</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">ListActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
