<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_content"
            android:icon="@drawable/fi_input_black"
            android:title="@string/main_content" />
        <item
            android:id="@+id/list_content"
            android:icon="@drawable/fi_graph_bar"
            android:title="@string/list_content" />
        <item
            android:id="@+id/edit_content"
            android:icon="@drawable/fi_page_edit"
            android:title="@string/edit_content" />
        <item
            android:id="@+id/holiday_content"
            android:icon="@drawable/fi_local_hotel_black"
            android:title="@string/holiday_content" />
    </group>

    <item android:title="@string/nav_mid_title">
        <menu>
            <item
                android:id="@+id/account_update"
                android:icon="@drawable/fi_loop"
                android:title="@string/account_update" />
            <item
                android:id="@+id/account_choice"
                android:icon="@drawable/fi_shuffle"
                android:title="@string/account_choice" />
            <item android:title="" />
            <item android:title="" />
            <item
                android:id="@+id/oauth_file"
                android:icon="@drawable/fi_delete_forever_black"
                android:title="@string/oauth_file" />
            <item
                android:id="@+id/delete_file"
                android:icon="@drawable/fi_biohazard"
                android:title="@string/delete_file" />
        </menu>
    </item>

</menu>
