<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/list_screen"
        android:orderInCategory="1"
        android:title="@string/list_content"
        android:icon="@android:drawable/ic_menu_agenda"
        />
    <item
        android:id="@+id/regist_screen"
        android:orderInCategory="2"
        android:title="@string/main_content"
        android:icon="@android:drawable/ic_menu_call"
        />
    <item
        android:id="@+id/edit_screen"
        android:orderInCategory="3"
        android:title="@string/edit_content" />
    <item
        android:id="@+id/holiday_screen"
        android:orderInCategory="4"
        android:title="@string/holiday_content" />
</menu>
